--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = pico32
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	madhephaestus/ESP32Servo@^0.11.0
+	brushlesspower/SBUS2@^1.2.0
