--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,8 @@ board = pico32
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
+	SPI
 	madhephaestus/ESP32Servo@^0.11.0
 	brushlesspower/SBUS2@^1.2.0
+	adafruit/Adafruit BNO055@^1.6.0
+	mikalhart/TinyGPSPlus@^1.0.3
