Switched from imumath Lib to Eigen3

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	brushlesspower/SBUS2@^1.2.0
 	adafruit/Adafruit BNO055@^1.6.0
 	mikalhart/TinyGPSPlus@^1.0.3
+	hideakitai/ArduinoEigen@^0.2.3
